tests/semantic/subsumption/subsumption.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2021, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

// Testing semantic checks

// Test intervals for simple number range
.decl A() btree_delete
A() <= A() :- true.
.output A

.decl C(x:number, y:number)
C(1,1).
C(1,2).

C(x,y1) <= C(x,y2) :-
   y2 <= y1.

.output C
